<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="version">2.0.0.2</string>
    <string name="app_name">Flight Sim Planner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="actions_download_databases">Download Databases</string>
    <string name="action_connect">Connect to Server</string>
    <string name="action_connectFsuipc">Open FSUIPC Connection</string>
    <string name="action_start">Start Receiving Data</string>
    <string name="action_searchairports">Search Airport</string>
    <string name="action_flightplan">Create or Edit Routes</string>
    <string name="action_flightplan_activate">Activate a route</string>
    <string name="action_maptype">Toggle through map types</string>
    <string name="action_tracking_locked">Map Locked</string>
    <string name="action_tracking_free">Map Free</string>
    <string name="action_connected">Connected</string>
    <string name="action_disconnected">Disconnected</string>
    <string name="action_connecting">Connecting..</string>
    <string name="action_loadaip">Load Aip Airspace</string>
    <string name="action_app_locked">App is Locked</string>
    <string name="action_app_free">App is Unlocked</string>
    <string name="action_airspace_check_active">Airspace Check Active</string>
    <string name="action_airspace_check_disabled">Airspace Check Disabled</string>
    <string name="countries_url">http://robenanita.yzi.me/countries.php</string>
    <string name="airports_url">http://robenanita.yzi.me/airports.php</string>
    <string name="search_hint_airports">"Search for airport on name or code". For example, "Schiphol" or "EHAM"</string>
    <string name="search_hint_navaids">"Search for Navaid (VOR-DME-NDB) on name or code". For example, "Schiphol" or "SPL"</string>
    <string name="search_hint_Fixes">"Search for Fix on code". For example, "GRONY"</string>
    <string name="search_hint_all">Search for airport, navaid or fix.</string>
    <string name="action_loadtrack">Load previous track</string>
    <string name="setting_ipnotvalid">This is not a valid ipaddress!</string>
    <string name="setting_portnotvalid">This is not a valid tcp-port!</string>
    <string name="getridoffadds">Get rid of ads!!</string>
    <string name="requirements">FSX, Prepar3D or XPlane requirements:</string>
    <string name="fsuipc">For FSX and Prepar3D please install <a href="http://www.schiratti.com/dowson.html">FSUIPC</a></string>
    <string name="xpuipc">For X-Plane please install <a href="http://www.tosi-online.de/XPUIPC/XPUIPC.html">XPUIPC</a></string>
    <string name="installation">Follow the <a href="http://www.mobileaviationtools.com/Installation/">installation instructions</a> on our webpage to install our special piece of server software.</string>
    <string name="jellylink">http://api.5jelly.com/redir/5930468</string>
    <string name="openaiplink">http://www.openaip.net/</string>
    <string name="openaviationdatalink">http://www.openaviationdata.com/</string>
    <string name="ourairportlink">http://www.ourairports.com/</string>
    <string name="weatherlink">https://www.aviationweather.gov/</string>
    <string name="xplanelink">http://data.x-plane.com/</string>
    <string name="fortacloudlink">http://fortacloud.co/</string>
    <string name="openweatherlink">http://www.openweathermap.com/</string>
    <string name="canadalink">https://weather.gc.ca/mainmenu/weather_menu_e.html</string>
    <string name="skylineslink">https://www.skylines.aero/</string>
    <string name="chartbundlelink">http://www.chartbundle.com/</string>
    <string name="openflightmapslink">https://openflightmaps.org/live/</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="title_activity_flight_plan">Create Route</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_search">Search Airports-Navaids-Fixes</string>
    <string name="title_activity_airport_search">Airport Search</string>
    <string name="title_activity_navaids_search">Navaids Search</string>
    <string name="title_activity_fix_seach">Fix Seach</string>
    <string name="title_activity_search_airports">Search Airports</string>
    <string name="title_activity_search_navaids">Search Navaids</string>
    <string name="search_airport_title">Search for Airports by name or ICAO code</string>
    <string name="search_navaid_title">Search for VOR-DME_NDB by name or code</string>
    <string name="search_fix_title">Search for Fixes by code</string>
    <string name="title_activity_flight_plan_activate">Activate Route</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_load_track">Load Track</string>
    <string name="action_test">Test</string>
    <string name="action_isnew">What is new?</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_directTo">Direct To</string>
    <string name="action_load_test_chart">Load Charts</string>
    <string name="action_backup_userdb">Backup User DB</string>
    <string name="action_choice_your_route">Choose your route</string>
    <string name="action_create_new_route">Create a new Route</string>
    <string name="map_style_icao">[{"featureType":"all","elementType":"all","stylers":[{"weight":1.43},{"saturation":100},{"lightness":-5}]},{"featureType":"landscape.man_made","elementType":"geometry","stylers":[{"color":"#e8bd4f"}]},{"featureType":"landscape.natural","elementType":"geometry.fill","stylers":[{"lightness":-4},{"gamma":4.11}]},{"featureType":"poi.park","elementType":"geometry","stylers":[{"color":"#a4eba5"}]},{"featureType":"road.local","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"weight":2.6}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"visibility":"off"},{"weight":1.38}]},{"featureType":"transit.line","elementType":"geometry.fill","stylers":[{"color":"#000000"}]},{"featureType":"transit.line","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"weight":6.58}]},{"featureType":"transit.station","elementType":"all","stylers":[{"weight":0.1},{"saturation":-43},{"lightness":-37}]},{"featureType":"water","elementType":"labels.text","stylers":[{"visibility":"on"},{"color":"#000000"},{"lightness":44}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#ff5252"},{"weight":2.28}]},{"featureType":"road.arterial","elementType":"geometry.fill","stylers":[{"color":"#ff9999"},{"weight":1.38}]},{"featureType":"water","elementType":"geometry.fill","stylers":[{"hue":"#78c8d6"},{"saturation":-42}]}]</string>
    <string name="close_menu">Open/Close Menu</string>
    <string name="dirtecttobtn">Direct To</string>
    <string name="flightplanactivate">Activate Route</string>
    <string name="connected_disconnected">Connect / Disconnect</string>
    <string name="trackactive">Lock Map to Location</string>
    <string name="flightplanbutton">Add new Route</string>
    <string name="maptype">Select Maps</string>
    <string name="aerodromesearch">Search</string>
    <string name="mapdirection">Set Map Direction</string>
    <string name="airspace_locked">Enable/Disable airspace</string>
    <string name="locked_unlocked">Lock/Unlock</string>
    <string name="settings">More</string>
    <string name="firebasetest">Download Databases</string>
    <string name="privacypolicy">Privacy Policy</string>
</resources>
