<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/load_track_item"
        android:title="@string/action_loadtrack"
        android:orderInCategory="96"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings_item"
        android:title="@string/action_settings"
        android:orderInCategory="97"
        app:showAsAction="never" />
    <item android:id="@+id/action_isnew"
        android:title="@string/action_isnew"
        android:orderInCategory="98"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_loadaip"
        android:orderInCategory="99"
        android:title="@string/action_loadaip"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_loadchart"
        android:orderInCategory="99"
        android:title="@string/action_load_test_chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup_userdb"
        app:showAsAction="never" />
    <item android:id="@+id/action_searchAirport"
        android:title="@string/action_searchairports"
        android:icon="@drawable/aerodromesearch"
        android:orderInCategory="99"
        app:showAsAction="always" />
    <item android:id="@+id/action_DirectTo"
        android:title="@string/action_directTo"
        android:icon="@drawable/dirtecttobtn"
        android:orderInCategory="99"
        app:showAsAction="always" />
    <item android:id="@+id/action_flightplan"
        android:title="@string/action_flightplan"
        android:icon="@drawable/flightplanbutton"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item android:id="@+id/action_flightplan_activate"
        android:title="@string/action_flightplan_activate"
        android:icon="@drawable/flightplanactivate"
        android:orderInCategory="102"
        app:showAsAction="always" />
    <item android:id="@+id/action_connect_disconnect"
        android:title="@string/action_connect_disconnect"
        android:icon="@drawable/disconnected"
        android:orderInCategory="105"
        app:showAsAction="always" />
    <item android:id="@+id/action_maptype"
        android:title="@string/action_maptype"
        android:icon="@drawable/maptype"
        android:orderInCategory="103"
        app:showAsAction="always" />
    <item android:id="@+id/action_tracking_active"
        android:title="@string/action_tracking_active"
        android:icon="@drawable/trackactive"
        android:orderInCategory="104"
        app:showAsAction="always" />

</menu>
