<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nl.robenanita.googlemapstest.StartActivity" >
    
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download_databases"
        android:orderInCategory="101"
        android:title="@string/actions_download_databases"
        android:visible="false"
        app:showAsAction="never" />
    <item android:id="@+id/action_firebase_test"
        android:title="@string/firebasetest"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item android:id="@+id/action_showPrivacyPolicy"
        android:title="@string/privacypolicy"
        android:orderInCategory="103"
        app:showAsAction="never" />
</menu>
