<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:id="@+id/searchPopup">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#EEEEEE"
        android:layout_margin="1dp">

        <TabHost
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:id="@+id/searchPopuptabhost"
            android:layout_gravity="top">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">


                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent">


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/airportSearchPopupLayout"
                        android:layout_margin="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/search_airport_title"
                            android:layout_gravity="center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/searchPopupAirportText"
                            android:layout_marginTop="10dp"
                            android:hint="@string/search_hint_airports" />

                        <ListView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/searchPopupAirportsListView"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:choiceMode="singleChoice" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/navaidsSearchPopupLayout"
                        android:layout_margin="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/search_navaid_title"
                            android:layout_gravity="center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/searchPopupNavaidsTxt"
                            android:layout_marginTop="10dp"
                            android:hint="@string/search_hint_navaids" />

                        <ListView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/searchPopupNavaidsListView"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:choiceMode="singleChoice" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/fixesSearchPopupLayout"
                        android:layout_margin="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/search_fix_title"
                            android:layout_gravity="center_horizontal" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/searchPopupFixesTxt"
                            android:layout_marginTop="10dp"
                            android:hint="@string/search_hint_Fixes" />

                        <ListView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/searchPopupFixesListView"
                            android:layout_marginTop="5dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:choiceMode="singleChoice" />

                    </LinearLayout>
                </FrameLayout>

            </LinearLayout>
        </TabHost>

    </LinearLayout>

</LinearLayout>